fix: alignment of info box on pages without side nav

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
@@ -305,16 +305,8 @@
     position: relative;
 }
 
-@media (max-width: 768px) {
-    .infobox {
-        margin-left: 30px;
-        margin-right: 15px;
-        padding: 15px;
-    }
-}
-
-div.infobox-width-container {
-    margin-left: 0;
+.infobox-no-side-nav .infobox {
+    margin: 25px 0px 25px 15px;
 }
 
 .infobox-green-brain {
